--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <!-- Filtered card -->
         <section id="filtered-section" class="hidden">
-            <div class="bg-white p-16 rounded-xl flex flex-col items-center text-center">
+            <div class="bg-white p-28 rounded-xl flex flex-col items-center text-center my-5">
                 <img src="jobs.png" alt="jobs">
                 <h2 class="text-xl font-bold text-gray-800">No jobs available</h2>
                 <p class="text-lg text-gray-500">Check back soon for new job opportunities</p>
