--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main class="w-[80%] mx-auto">
         <div class="flex justify-between my-5">
             <h3 class="text-lg font-bold">Available Jobs</h3>
-            <p class="font-semibold text-gray-500">0 jobs</p>
+            <p id="jobCount" class="font-semibold text-gray-500">0 jobs</p>
         </div>
         
         <div class="flex flex-col md:flex-row gap-3 my-5">
